tests/specs/ecosystem/sftsrv/structured_html/0_0_3.test
sftsrv/structured-html/0.0.3
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'Element'.
export const convertHtmlToStructuredContent = (html: Element): EditorContent => {
                                                     ~~~~~~~
    at file://<tmpdir>/src/index.ts:8:54

error: Type checking failed.

